--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -57,7 +57,7 @@ App As appinfo:
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
         
-         { Role: "Usinagem_Engr_1ª/2ª",Screen: Usinagem_Engr_1ª_2ª },
+         { Role: "Usinagem_Engr_1ª_2ª",Screen: Usinagem_Engr_1ª_2ª },
          { Role: "Usinagem_Eixo_Secundário",Screen: Usinagem_Eixo_Secundário },
          { Role: "Usinagem_Eixo_Primário",Screen: Usinagem_Eixo_Primário },
          { Role: "Usinagem_Coroa_Cilíndrica",Screen: Usinagem_Coroa_Cilíndrica },
