--- a/Levantamento de Perdas/Src/Usinagem_Engr_1%aa_2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_1%aa_2%aa.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Engr_1ª_2ª As screen:
 
     Image3_6 As image:
         Height: =967
-        Image: ='Usinagem_Engrenagem_1ª_2ª'
+        Image: =Usinagem_Engrenagem_1ª_2ª
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
