--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -95,11 +95,11 @@
     "Id": "3aaae7a9-6de1-4749-802c-2ff7999f4249",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
-    "Name": "Levantamento de Perdas - Transmissões",
+    "Name": "Levantamento de Perdas - Transmissões - Modificação do campo de salvar produção perda",
     "OriginatingVersion": "1.324"
   },
   "PublishInfo": {
-    "AppName": "Levantamento de Perdas - Transmissões",
+    "AppName": "Levantamento de Perdas - Transmissões - Modificação do campo de salvar produção perda",
     "BackgroundColor": "rgba(0, 176, 240, 1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "",
